<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/img_flag"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"/>
    <TableLayout
        android:id="@+id/detail_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Table Localization -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tag_location"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
        </TableRow>
        <!-- Table Capital -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tag_capital"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/capital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
        </TableRow>
        <!-- Table Volume -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tag_volume"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
        </TableRow>
        <!-- Table Weather -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tag_weather"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
        </TableRow>
        <!-- Table Language -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tag_language"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:layout_marginRight="10dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>